--- a/app/app.css
+++ b/app/app.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-Button.-primary {
+Button {
   font-size: 18;
+  background-color: white;
+  border-radius: 50;
 }
